WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145227
REGRESSION (
r172591
): Can no longer style <optgroup> with colors (LayoutTests/fast/forms/select/optgroup-rendering.html)
https://bugs.webkit.org/show_bug.cgi?id=145227
Summary
REGRESSION (r172591): Can no longer style <optgroup> with colors (LayoutTests...
Antti Koivisto
Reported
2015-05-20 16:01:04 PDT
14/05/15 17:38 Simon Fraser: LayoutTests/fast/forms/select/optgroup-rendering.html started to render differently at some point. It no longer shows colors in the list now.
Attachments
patch
(9.77 KB, patch)
2015-05-20 16:07 PDT
,
Antti Koivisto
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2015-05-20 16:01:28 PDT
rdar://problem/20967472
Antti Koivisto
Comment 2
2015-05-20 16:07:45 PDT
Created
attachment 253471
[details]
patch
Darin Adler
Comment 3
2015-05-20 16:11:08 PDT
Comment on
attachment 253471
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=253471&action=review
> Source/WebCore/ChangeLog:10 > + Use computedStyle() consistently for option and optgroup items.
Is this bad for performance?
Antti Koivisto
Comment 4
2015-05-20 16:12:48 PDT
> > Source/WebCore/ChangeLog:10 > > + Use computedStyle() consistently for option and optgroup items. > > Is this bad for performance?
No. It caches the style.
Ahmad Saleem
Comment 5
2022-10-05 15:47:30 PDT
This seems to landed in this commit:
https://github.com/WebKit/WebKit/commit/40c3076b29d48da38bec16daba7ada102275e476
and not backed out while searching via bug ID on Webkit GitHub. Marking this as "RESOLVED FIXED". Thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug