REGRESSION (r172591): Can no longer style <optgroup> with colors (LayoutTests/fast/forms/select/optgroup-rendering.html) https://bugs.webkit.org/show_bug.cgi?id=145227 Source/WebCore:

rdar://problem/20967472

Reviewed by Darin Adler.

Test: fast/forms/select/select-painting.html

Use computedStyle() consistently for option and optgroup items.

* rendering/RenderListBox.cpp:
(WebCore::RenderListBox::paintItemForeground):
(WebCore::RenderListBox::paintItemBackground):

    We can always use computedStyle() and it can't be null. If there was renderer style it would return that.

* rendering/RenderMenuList.cpp:
(RenderMenuList::itemStyle):
(RenderMenuList::getItemBackgroundColor):

LayoutTests:


Reviewed by Darin Adler.

Add ref test for select painting.

* fast/forms/select/select-painting-expected.html: Added.
* fast/forms/select/select-painting.html: Added.



Canonical link: https://commits.webkit.org/163246@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184675 268f45cc-cd09-0410-ab3c-d52691b4dbfc